<resources>
    <string name="app_name">OneWeekOneBook</string>
    <string name="admob_app_id">ca-app-pub-7727150178095243~2070810518</string>
    <string name="banner_ad_unit_id">ca-app-pub-7727150178095243/9287240969</string>
    <string name="banner_ad_unit_id_book">ca-app-pub-7727150178095243/4231786028</string>
    <string name="banner_ad_unit_id_test">ca-app-pub-3940256099942544/63009781v11</string>

    <string name="app_title">일주일책</string>

    <string name="home">홈</string>
    <string name="search">검색</string>
    <string name="setting">설정</string>
    <string name="history">독서내역</string>
    <string name="add">추가하기</string>
    <string name="edit">수정하기</string>
    <string name="delete">삭제하기</string>

    <string name="home_title">일주일책</string>
    <string name="add_book">책 읽기 시작</string>
    <string name="wish_title">좋아요</string>
    <string name="reading_title">읽는중</string>
    <string name="done_title">다읽은</string>
    <string name="search_title">검색</string>
    <string name="search_book_title">책 제목 입력</string>
    <string name="search_book_title_empty">입력된 내용이 없습니다</string>
    <string name="search_book_result_empty">검색된 내용이 없습니다</string>
    <string name="suggest_title">뭐읽지</string>

    <string name="wish_add_title">읽고 싶은 책 추가</string>
    <string name="done_edit_title">다 읽은 책 수정</string>

    <string name="book_title">제목</string>
    <string name="book_writer">저자</string>
    <string name="book_publisher">출판사</string>
    <string name="book_list">목록</string>
    <string name="book_list_reading">읽고 있는 책 목록</string>
    <string name="book_list_reading_add">읽고 있는 책 목록에 추가</string>
    <string name="book_list_delete">목록에서 삭제되었습니다</string>
    <string name="book_about">책 소개</string>
    <string name="book_empty">독서내역이 없어요</string>
    <string name="book_search_empty">오늘 뭐 읽지?</string>

    <string name="home_book_list">책꽂이</string>
    <string name="home_book_add">선반에 책 추가하기</string>
    <string name="home_wise_saying_content">\"%s\"</string>
    <string name="home_wise_saying_writer">-%s</string>

    <string name="reading_save">내용이 저장되었습니다</string>
    <string name="reading_contents">기억에 남는 내용</string>
    <string name="reading_review">느낀점</string>
    <string name="eng_reading_contents">memorable contents</string>
    <string name="eng_reading_review">reviews</string>

    <string name="book_save">저장</string>
    <string name="book_save_contents">내용 저장하기</string>
    <string name="book_review_count">(%d)</string>

    <string name="home_category">카테고리</string>

    <string name="tool_bar_add_book">책 추가</string>
    <string name="tool_bar_add_book_description">책을 추가 하시겠습니까?</string>
    <string name="tool_bar_setting">관리</string>
    <string name="tool_bar_setting_description">관리 페이지로 이동</string>

    <string name="error_network_not_connected">네트워크 상태를 확인해주세요</string>

    <string name="dialog_book_add_description">독서를 시작해 볼까요?</string>
    <string name="dialog_book_done_description">독서를 완료하셨나요?</string>
    <string name="dialog_book_wish_description">좋아요 목록에 추가할까요?</string>
    <string name="dialog_book_delete_description">독서내역에서 삭제할까요?</string>
    <string name="dialog_book_confirm">시작하기</string>
    <string name="dialog_book_cancel">취소</string>
    <string name="dialog_book_positive">네!!</string>
    <string name="dialog_book_negative">다음에요~</string>

    <string name="setting_open_source">오픈소스 라이선스 확인하기</string>
    <string name="setting_app_version">현재 버전 %s</string>

    <string name="permission_denied_camera">권한에 동의하지 않으면 책표지를 저장할 수 없습니다</string>

    <string name="take_picture">표지 직접 촬영하기</string>
    <string name="picture_from_gallery">갤러리에서 가져오기</string>

</resources>
