<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/navigation"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/splashFragment"
        android:name="com.lee.oneweekonebook.ui.splash.SplashFragment"
        android:label="@string/splash_title">
        <action
            android:id="@+id/action_splashFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
    </fragment>

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.lee.oneweekonebook.ui.home.HomeFragment"
        android:label="@string/home_title">
        <action
            android:id="@+id/action_homeFragment_to_wishBookFragment"
            app:destination="@id/wishBookFragment" />
        <action
            android:id="@+id/action_homeFragment_to_readingBookFragment"
            app:destination="@id/readingBookFragment"/>
        <action
            android:id="@+id/action_homeFragment_to_doneBookFragment"
            app:destination="@id/doneBookFragment" />
        <action
            android:id="@+id/action_homeFragment_to_searchBookFragment"
            app:destination="@id/searchBookFragment" />
        <action
            android:id="@+id/action_homeFragment_to_addBookFragment"
            app:destination="@id/addBookFragment" />
    </fragment>

    <!--    wish-->
    <fragment
        android:id="@+id/wishBookFragment"
        android:name="com.lee.oneweekonebook.ui.wish.WishBookFragment"
        android:label="@string/wish_title">
        <action
            android:id="@+id/action_wishBookFragment_to_addBookFragment"
            app:destination="@id/addBookFragment" />
<!--        <action-->
<!--            android:id="@+id/action_wishBookFragment_to_wishBookAddFragment"-->
<!--            app:destination="@+id/wishBookAddFragment" />-->
    </fragment>

    <fragment
        android:id="@+id/wishBookAddFragment"
        android:name="com.lee.oneweekonebook.ui.wish.WishBookAddFragment"
        android:label="@string/wish_add_title" />

    <!--    done-->
    <fragment
        android:id="@+id/doneBookFragment"
        android:name="com.lee.oneweekonebook.ui.done.DoneBookFragment"
        android:label="@string/done_title">
        <action
            android:id="@+id/action_doneBookFragment_to_doneBookDetailFragment"
            app:destination="@+id/doneBookDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/doneBookDetailFragment"
        android:name="com.lee.oneweekonebook.ui.done.DoneBookDetailFragment"
        android:label="@string/done_edit_title">

    </fragment>

    <!--    search-->
    <fragment
        android:id="@+id/searchBookFragment"
        android:name="com.lee.oneweekonebook.ui.search.SearchBookFragment"
        android:label="@string/search_title">

    </fragment>

    <!--    reading-->
    <fragment
        android:id="@+id/readingBookFragment"
        android:name="com.lee.oneweekonebook.ui.reading.ReadingBookFragment"
        android:label="@string/reading_title">
        <argument
            android:name="bookId"
            app:argType="integer"
            android:defaultValue="0" />
        <action
            android:id="@+id/action_readingBookFragment_to_doneBookFragment"
            app:destination="@id/doneBookFragment"/>
    </fragment>

    <!--    add-->
    <fragment
        android:id="@+id/addBookFragment"
        android:name="com.lee.oneweekonebook.ui.add.AddBookFragment"
        android:label="@string/add_title">
        <argument
            android:name="bookType"
            app:argType="integer"
            android:defaultValue="-1" />
        <argument
            android:name="bookId"
            app:argType="string"
            android:defaultValue="@null"
            app:nullable="true" />
    </fragment>

</navigation>