<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:overScrollMode="never">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_done"
                style="@style/Widget.Custom.Button.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:icon="@drawable/ic_baseline_done_outline"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView_cover"
                android:layout_width="0dp"
                android:layout_height="300dp"
                android:layout_margin="@dimen/spacing_normal"
                android:background="@drawable/shape_box"
                android:padding="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/button_done"
                app:srcCompat="@drawable/ic_baseline_add_photo_alternate" />

            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/spacing_normal"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/imageView_cover">
                <RadioButton android:id="@+id/radio_wish"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/wish_title" />
                <RadioButton android:id="@+id/radio_reading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reading_title" />
                <RadioButton android:id="@+id/radio_done"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/done_title" />
            </RadioGroup>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_title"
                style="@style/Widget.Custom.Text.Search.Front"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/spacing_normal"
                android:layout_marginVertical="@dimen/spacing_item_normal"
                android:hint="@string/book_title"
                app:layout_constraintTop_toBottomOf="@id/radioGroup">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editText_title"
                    style="@style/Widget.Custom.Text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_writer"
                style="@style/Widget.Custom.Text.Search.Front"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/spacing_normal"
                android:layout_marginVertical="@dimen/spacing_item_normal"
                android:hint="@string/book_writer"
                app:layout_constraintTop_toBottomOf="@id/layout_title">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editText_writer"
                    style="@style/Widget.Custom.Text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_publisher"
                style="@style/Widget.Custom.Text.Search.Front"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/spacing_normal"
                android:layout_marginTop="@dimen/spacing_item_normal"
                android:layout_marginBottom="@dimen/spacing_normal"
                android:hint="@string/book_publisher"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layout_writer"
                app:layout_constraintVertical_bias="0.0">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editText_publisher"
                    style="@style/Widget.Custom.Text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName" />
            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>