<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.lee.oneweekonebook.ui.edit.viewmodel.EditBookViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:overScrollMode="never">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/button_done"
                style="@style/Widget.Custom.Button.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_book_save"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView_book"
                android:layout_width="0dp"
                android:layout_height="300dp"
                android:layout_margin="@dimen/spacing_normal"
                android:background="@drawable/shape_box"
                android:padding="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/button_done"
                app:srcCompat="@drawable/ic_baseline_add_photo_alternate" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_title"
                style="@style/Widget.Custom.Text.Search.Front"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/spacing_normal"
                android:layout_marginVertical="@dimen/spacing_item_normal"
                android:hint="@string/book_title"
                app:layout_constraintTop_toBottomOf="@id/imageView_book">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editText_title"
                    style="@style/Widget.Custom.Text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:text="@{viewModel.book.title}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_writer"
                style="@style/Widget.Custom.Text.Search.Front"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/spacing_normal"
                android:layout_marginVertical="@dimen/spacing_item_normal"
                android:hint="@string/book_writer"
                app:layout_constraintTop_toBottomOf="@id/layout_title">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editText_writer"
                    style="@style/Widget.Custom.Text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:text="@{viewModel.book.writer}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_publisher"
                style="@style/Widget.Custom.Text.Search.Front"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/spacing_normal"
                android:layout_marginVertical="@dimen/spacing_item_normal"
                android:hint="@string/book_publisher"
                app:layout_constraintTop_toBottomOf="@id/layout_writer">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editText_publisher"
                    style="@style/Widget.Custom.Text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:text="@{viewModel.book.publisher}" />
            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>